// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<button
  className="btn-style"
  data-testid="button"
>
  Hi 
  Save
</button>
`;

exports[`matches snapshot 2 1`] = `
<button
  className="btn-style"
  data-testid="button"
>
  Hi 
  click me please
</button>
`;
